# mango-framework

./: CMakeLists.txt  README.md
src/: event.c  main.c  window.c
src/include/: event.h  window.h
src/linux/: linevent.c  linwindow.c
src/linux/include/: linevent.h  linwindow.h
src/macos/: macapp.m  macevent.m  macwindow.m
src/macos/include/: macapp.h  macevent.h  macwindow.h
src/windows/: wincontext.c  winevent.c  winwindow.c
src/windows/include/: wincontext.h  winevent.h  winwindow.h
